# Rokey-Collaboration3

./: .gitignore  README.md
aruco_yolo/aruco_yolo/: aruco_detector.py  pick_n_place.0517.pm.py  pick_n_place.0518.py
aruco_yolo/config/: calibration_params.yaml
aruco_yolo/launch/: aruco_last.launch.py
grasp_executor_cpp/: CMakeLists.txt  package.xml
grasp_executor_cpp/launch/: grasp_executor.launch.py  grasp_executor_base.launch.py  grasp_system.launch.py
grasp_executor_cpp/src/: grasp_executor_aruco.cpp  grasp_executor_aruco_auto copy.cpp  grasp_executor_aruco_auto.cpp  grasp_executor_aruco_auto_auto.cpp  grasp_executor_base.cpp
lane_detect/lane_detect/: camera_processing.py  camera_processing_test1.py  subscriber_node.py  subscriber_node_test1.py
turtlebot3_manipulation/turtlebot3_manipulation_bringup/config/: hardware_controller_manager.yaml
turtlebot3_manipulation/turtlebot3_manipulation_bringup/launch/: gazebo.launch.py
turtlebot3_manipulation/turtlebot3_manipulation_bringup/worlds/: empty_world.model
turtlebot3_manipulation/turtlebot3_manipulation_description/gazebo/: turtlebot3_waffle_pi.gazebo.xacro
turtlebot3_manipulation/turtlebot3_manipulation_description/urdf/: open_manipulator_x.urdf.xacro  turtlebot3_manipulation.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
turtlebot3_manipulation/turtlebot3_manipulation_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  turtlebot3_manipulation.srdf
turtlebot3_manipulation/turtlebot3_manipulation_moveit_config/launch/: move_group.launch.py
